--- a/index.html
+++ b/index.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+</head>
 
-  </body>
+<body>
+  <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+  <header>
+    <nav>
+      <a>
+        <img src="img/logo.svg" arc="Logo image">
+      </a>
+      <ul>
+        <li><a href="">Информация</a></li>
+        <li><a href="">Фото и Видео</a></li>
+        <li><a href="">Карта Штата</a></li>
+        <li><a href="">Гостиницы</a></li>
+      </ul>
+      <nav>
+  </header>
+  <main>
+    <section>
+      <h1>Седона - город в Аризоне</h1>
+      <b>Седона - небольшой городок в Аризоне, заслуживающий большего!</b>
+      <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+    </section>
+    <section>
+      <!--Здесь будет информация о городе-->
+    </section>
+    <section>
+      <b>Заинтресовались?</b>
+      <p>Укажите предполошаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <h2>Поиск Гостиницы в Седоне</h2>
+      <!--Здесь будет форма-->
+    </section>
+  </main>
+  <footer>
+    <a href="#">#VISITSEDONA</a>
+    <div>
+      <ul>
+        <li><a href="#">Вконтакте</a></li>
+        <li><a href="#">Фейсбук</a></li>
+        <li><a href="#">Инстаграм</a></li>
+      </ul>
+    </div>
+    <a href="https://htmlacademy.ru">HTML Academy</a>
+  </footer>
+</body>
+
 </html>
