--- a/index.html
+++ b/index.html
@@ -7,24 +7,22 @@
 </head>
 
 <body>
-  <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
   <header>
     <nav>
       <a>
-        <img src="img/logo.svg" arc="Logo image">
+        <img src="img/logo.svg" arc="Логотип Седоны">
       </a>
       <ul>
         <li><a href="">Информация</a></li>
         <li><a href="">Фото и Видео</a></li>
         <li><a href="">Карта Штата</a></li>
-        <li><a href="">Гостиницы</a></li>
+        <li><a href="#catalog.html">Гостиницы</a></li>
       </ul>
-      <nav>
+    <nav>
   </header>
   <main>
     <section>
-      <h1>Седона - город в Аризоне</h1>
-      <b>Седона - небольшой городок в Аризоне, заслуживающий большего!</b>
+      <h1>Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
       <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
     </section>
     <section>
@@ -33,20 +31,18 @@
     <section>
       <b>Заинтресовались?</b>
       <p>Укажите предполошаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <h2>Поиск Гостиницы в Седоне</h2>
+      <button>Поиск Гостиницы в Седоне</button>
       <!--Здесь будет форма-->
     </section>
   </main>
   <footer>
-    <a href="#">#VISITSEDONA</a>
-    <div>
+    #Visitsedona
       <ul>
         <li><a href="#">Вконтакте</a></li>
         <li><a href="#">Фейсбук</a></li>
         <li><a href="#">Инстаграм</a></li>
       </ul>
-    </div>
-    <a href="https://htmlacademy.ru">HTML Academy</a>
+     <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
   </footer>
 </body>
 
