--- a/catalog.html
+++ b/catalog.html
@@ -5,109 +5,104 @@
   <meta charset="utf-8">
   <title>Поиск отелей</title>
 </head>
+
 <body>
   <header>
     <nav>
-      <a>
-        <img src="img/logo.svg" arc="Logo image">
+      <a href="#index.html">
+        <img src="img/logo.svg" arc="Логотип Седоны">
       </a>
       <ul>
-        <li><a href="">Информация</a></li>
-        <li><a href="">Фото и Видео</a></li>
-        <li><a href="">Карта Штата</a></li>
-        <li><a href="">Гостиницы</a></li>
+        <li><a href="#">Информация</a></li>
+        <li><a href="#">Фото и Видео</a></li>
+        <li><a href="#">Карта Штата</a></li>
+        <li><a>Гостиницы</a></li>
       </ul>
       <nav>
   </header>
   <main>
-
-  	<form>
-  		<!--Здесь будет форма-->
-  	</form>
-
-  	<article>
-  		<figure>
-  			<img src="" alt="Amara Resort & Spa">
-  		</figure>
-  		<div>
-  			<h2>Amara Resort & Spa</h2>
-  		</div>
-  		<div>
-  			<div>
-  				<p>Гостиница</p>
-  				<button>Подробнее</button>
-  			</div>
-  			<div>
-  				<p>От 4000р</p>
-  				<button>Забронировать</button>
-  			</div>
-  		</div>
-  		</div>
-  		<div>
-  			<div>Отель 4 звезды</div>
-  			<p>Рейтинг: 8,5<p>
-  		</div>
-  	</article>
-
-  	<article>
-  		<figure>
-  			<img src="" alt="Desert Quail Inn">
-  		</figure>
-  		<div>
-  			<h2>Desert Quail Inn</h2>
-  		</div>
-  		<div>
-  			<div>
-  				<p>Гостиница</p>
-  				<button>Подробнее</button>
-  			</div>
-  			<div>
-  				<p>От 3000р</p>
-  				<button>Забронировать</button>
-  			</div>
-  		</div>
-  		</div>
-  		<div>
-  			<div>Отель 3 звезды</div>
-  			<p>Рейтинг: 8,9<p>
-  		</div>
-  	</article>
-
-  	<article>
-  		<figure>
-  			<img src="" alt="Villas at poco diablo">
-  		</figure>
-  		<div>
-  			<h2>Villas at poco diablo</h2>
-  		</div>
-  		<div>
-  			<div>
-  				<p>Гостиница</p>
-  				<button>Подробнее</button>
-  			</div>
-  			<div>
-  				<p>От 2000р</p>
-  				<button>Забронировать</button>
-  			</div>
-  		</div>
-  		</div>
-  		<div>
-  			<div>Отель 2 звезды</div>
-  			<p>Рейтинг: 9,2<p>
-  		</div>
-  	</article>
+    <form>
+      <!--Здесь будет форма-->
+    </form>
+    <article>
+      <div>
+        <img src="" alt="Amara Resort & Spa">
+      </div>
+      <a href="#">
+        <h2>Amara Resort & Spa</h2>
+      </a>
+      <div>
+        <div>
+          <p>Гостиница</p>
+          <p>От 4000р</p>
+        </div>
+        <div>
+          <a href="#">Подробнее</a>
+          <a href="#">Забронировать</a>
+        </div>
+      </div>
+      </div>
+      <div>
+        <div>Отель 4 звезды</div>
+        <p>Рейтинг: 8,5<p>
+      </div>
+    </article>
+    <article>
+      <div>
+        <img src="" alt="Desert Quail Inn">
+      </div>
+      <a href="#">
+        <h2>Desert Quail Inn</h2>
+      </a>
+      <div>
+        <div>
+          <p>Гостиница</p>
+          <p>От 3000р</p>
+        </div>
+        <div>
+          <a href="#">Подробнее</a>
+          <a href="#">Забронировать</a>
+        </div>
+      </div>
+      </div>
+      <div>
+        <div>Отель 3 звезды</div>
+        <p>Рейтинг: 8,9<p>
+      </div>
+    </article>
+    <article>
+      <div>
+        <img src="" alt="Villas at poco diablo">
+      </div>
+      <a href="#">
+        <h2>Villas at poco diablo</h2>
+      </a>
+      <div>
+        <div>
+          <p>Гостиница</p>
+          <p>От 2000р</p>
+        </div>
+        <div>
+          <a href="#">Подробнее</a>
+          <a href="#">Забронировать</a>
+        </div>
+      </div>
+      </div>
+      <div>
+        <div>Отель 2 звезды</div>
+        <p>Рейтинг: 9,2<p>
+      </div>
+    </article>
   </main>
-   <footer>
-    <a href="#">#VISITSEDONA</a>
-    <div>
+  <footer>
+      <h2>#Visitsedona</h2>
       <ul>
         <li><a href="#">Вконтакте</a></li>
         <li><a href="#">Фейсбук</a></li>
         <li><a href="#">Инстаграм</a></li>
       </ul>
-    </div>
-    <a href="https://htmlacademy.ru">HTML Academy</a>
+    <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
   </footer>
-
 </body>
+
 </html>
