--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <nav>
-      <a href="#index.html">
+      <a href="index.html">
         <img src="img/logo.svg" arc="Логотип Седоны">
       </a>
       <ul>
@@ -26,7 +26,7 @@
     </form>
     <article>
       <div>
-        <img src="" alt="Amara Resort & Spa">
+        <img src="img/AmaraResort&Spa.jpg" alt="Amara Resort & Spa">
       </div>
       <a href="#">
         <h2>Amara Resort & Spa</h2>
@@ -43,13 +43,18 @@
       </div>
       </div>
       <div>
-        <div>Отель 4 звезды</div>
+        <div>
+           <img src="img/star.svg" alt="Отель 4 звезды">
+           <img src="img/star.svg" alt="Отель 4 звезды">
+           <img src="img/star.svg" alt="Отель 4 звезды">
+           <img src="img/star.svg" alt="Отель 4 звезды">
+        </div>
         <p>Рейтинг: 8,5<p>
       </div>
     </article>
     <article>
       <div>
-        <img src="" alt="Desert Quail Inn">
+        <img src="img/DesertQuaolInn.jpg" alt="Desert Quail Inn">
       </div>
       <a href="#">
         <h2>Desert Quail Inn</h2>
@@ -66,13 +71,17 @@
       </div>
       </div>
       <div>
-        <div>Отель 3 звезды</div>
+        <div>
+          <img src="img/star.svg" alt="Отель 3 звезды">
+          <img src="img/star.svg" alt="Отель 3 звезды">
+          <img src="img/star.svg" alt="Отель 3 звезды">
+        </div>
         <p>Рейтинг: 8,9<p>
       </div>
     </article>
     <article>
       <div>
-        <img src="" alt="Villas at poco diablo">
+        <img src="img/VillasAtPocoDiablo.jpg" alt="Villas at poco diablo">
       </div>
       <a href="#">
         <h2>Villas at poco diablo</h2>
@@ -89,19 +98,22 @@
       </div>
       </div>
       <div>
-        <div>Отель 2 звезды</div>
+        <div>
+           <img src="img/star.svg" alt="Отель 2 звезды">
+            <img src="img/star.svg" alt="Отель 2 звезды">
+        </div>
         <p>Рейтинг: 9,2<p>
       </div>
     </article>
   </main>
   <footer>
-      <h2>#Visitsedona</h2>
+      <img src="img/visitsedona.png" arc="#Visitsedona">
       <ul>
-        <li><a href="#">Вконтакте</a></li>
-        <li><a href="#">Фейсбук</a></li>
-        <li><a href="#">Инстаграм</a></li>
+        <li><a href="#"><img src="img/twitter.svg"></a></li>
+        <li><a href="#"><img src="img/facebook.svg"></a></li>
+        <li><a href="#"><img src="img/youtube.svg"></a></li>
       </ul>
-    <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+     <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/htmlacademy.svg"></a>
   </footer>
 </body>
 
