--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
   <header>
     <nav>
       <a>
-        <img src="img/logo.svg" arc="Логотип Седоны">
+        <img src="img/logo.svg" width="100" height="50" arc="Логотип Седоны">
       </a>
       <ul>
         <li><a href="">Информация</a></li>
         <li><a href="">Фото и Видео</a></li>
         <li><a href="">Карта Штата</a></li>
-        <li><a href="#catalog.html">Гостиницы</a></li>
+        <li><a href="catalog.html">Гостиницы</a></li>
       </ul>
+      <img src="img/background photo.jpg" width="1200" height="800" arc="Фото Седоны">
+      <img src="img/polygon.png" width="1200" height="57" arc="Полигон">
     <nav>
   </header>
   <main>
@@ -36,13 +38,13 @@
     </section>
   </main>
   <footer>
-    #Visitsedona
+    <img src="img/visitsedona.png" arc="#Visitsedona">
       <ul>
-        <li><a href="#">Вконтакте</a></li>
-        <li><a href="#">Фейсбук</a></li>
-        <li><a href="#">Инстаграм</a></li>
+        <li><a href="#"><img src="img/twitter.svg"></a></li>
+        <li><a href="#"><img src="img/facebook.svg"></a></li>
+        <li><a href="#"><img src="img/youtube.svg"></a></li>
       </ul>
-     <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+     <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/htmlacademy.svg"></a>
   </footer>
 </body>
 
