--- a/catalog.html
+++ b/catalog.html
@@ -28,27 +28,16 @@
       <div>
         <img src="img/AmaraResort&Spa.jpg" alt="Amara Resort & Spa">
       </div>
-      <a href="#">
-        <h2>Amara Resort & Spa</h2>
-      </a>
       <div>
-        <div>
-          <p>Гостиница</p>
-          <p>От 4000р</p>
-        </div>
-        <div>
-          <a href="#">Подробнее</a>
-          <a href="#">Забронировать</a>
-        </div>
-      </div>
+        <h2>
+          <a href="#">Amara Resort & Spa</a>
+        </h2>
+        <p>Гостиница</p>
+        <p>От 4000р</p>
+        <a href="#">Подробнее</a>
+        <a href="#">Забронировать</a>
       </div>
       <div>
-        <div>
-           <img src="img/star.svg" alt="Отель 4 звезды">
-           <img src="img/star.svg" alt="Отель 4 звезды">
-           <img src="img/star.svg" alt="Отель 4 звезды">
-           <img src="img/star.svg" alt="Отель 4 звезды">
-        </div>
         <p>Рейтинг: 8,5<p>
       </div>
     </article>
@@ -56,26 +45,16 @@
       <div>
         <img src="img/DesertQuaolInn.jpg" alt="Desert Quail Inn">
       </div>
-      <a href="#">
-        <h2>Desert Quail Inn</h2>
-      </a>
       <div>
-        <div>
-          <p>Гостиница</p>
-          <p>От 3000р</p>
-        </div>
-        <div>
-          <a href="#">Подробнее</a>
-          <a href="#">Забронировать</a>
-        </div>
-      </div>
+        <h2>
+          <a href="#">Desert Quail Inn</a>
+        </h2>
+        <p>Гостиница</p>
+        <p>От 3000р</p>
+        <a href="#">Подробнее</a>
+        <a href="#">Забронировать</a>
       </div>
       <div>
-        <div>
-          <img src="img/star.svg" alt="Отель 3 звезды">
-          <img src="img/star.svg" alt="Отель 3 звезды">
-          <img src="img/star.svg" alt="Отель 3 звезды">
-        </div>
         <p>Рейтинг: 8,9<p>
       </div>
     </article>
@@ -83,37 +62,28 @@
       <div>
         <img src="img/VillasAtPocoDiablo.jpg" alt="Villas at poco diablo">
       </div>
-      <a href="#">
-        <h2>Villas at poco diablo</h2>
-      </a>
       <div>
-        <div>
-          <p>Гостиница</p>
-          <p>От 2000р</p>
-        </div>
-        <div>
-          <a href="#">Подробнее</a>
-          <a href="#">Забронировать</a>
-        </div>
-      </div>
+        <h2>
+          <a href="#">Villas at poco diablo</a>
+        </h2>
+        <p>Гостиница</p>
+        <p>От 2000р</p>
+        <a href="#">Подробнее</a>
+        <a href="#">Забронировать</a>
       </div>
       <div>
-        <div>
-           <img src="img/star.svg" alt="Отель 2 звезды">
-            <img src="img/star.svg" alt="Отель 2 звезды">
-        </div>
         <p>Рейтинг: 9,2<p>
       </div>
     </article>
   </main>
   <footer>
-      <img src="img/visitsedona.png" arc="#Visitsedona">
-      <ul>
-        <li><a href="#"><img src="img/twitter.svg"></a></li>
-        <li><a href="#"><img src="img/facebook.svg"></a></li>
-        <li><a href="#"><img src="img/youtube.svg"></a></li>
-      </ul>
-     <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/htmlacademy.svg"></a>
+    <p>#Visitsedona</p>
+    <ul>
+      <li><a href="#"><img src="img/twitter.svg"></a></li>
+      <li><a href="#"><img src="img/facebook.svg"></a></li>
+      <li><a href="#"><img src="img/youtube.svg"></a></li>
+    </ul>
+    <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/htmlacademy.svg"></a>
   </footer>
 </body>
 
