--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
         <li><a href="">Карта Штата</a></li>
         <li><a href="catalog.html">Гостиницы</a></li>
       </ul>
-      <img src="img/background photo.jpg" width="1200" height="800" arc="Фото Седоны">
-      <img src="img/polygon.png" width="1200" height="57" arc="Полигон">
     <nav>
   </header>
   <main>
@@ -38,7 +36,7 @@
     </section>
   </main>
   <footer>
-    <img src="img/visitsedona.png" arc="#Visitsedona">
+    <p>#Visitsedona</p>
       <ul>
         <li><a href="#"><img src="img/twitter.svg"></a></li>
         <li><a href="#"><img src="img/facebook.svg"></a></li>
