--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
   <header>
     <nav>
       <a href="index.html">
-        <img src="img/logo.svg" arc="Логотип Седоны">
+        <img src="img/logo-sedona.svg" width="100" height="50" arc="Логотип Седоны">
       </a>
       <ul>
         <li><a href="#">Информация</a></li>
@@ -26,7 +26,7 @@
     </form>
     <article>
       <div>
-        <img src="img/AmaraResort&Spa.jpg" alt="Amara Resort & Spa">
+        <img src="img/AmaraResort&Spa.jpg" alt="Отель Amara Resort & Spa">
       </div>
       <div>
         <h2>
@@ -38,12 +38,16 @@
         <a href="#">Забронировать</a>
       </div>
       <div>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
         <p>Рейтинг: 8,5<p>
       </div>
     </article>
     <article>
       <div>
-        <img src="img/DesertQuaolInn.jpg" alt="Desert Quail Inn">
+        <img src="img/DesertQuaolInn.jpg" alt="Отель desert quail inn">
       </div>
       <div>
         <h2>
@@ -55,12 +59,15 @@
         <a href="#">Забронировать</a>
       </div>
       <div>
+        <span></span>
+        <span></span>
+        <span></span>
         <p>Рейтинг: 8,9<p>
       </div>
     </article>
     <article>
       <div>
-        <img src="img/VillasAtPocoDiablo.jpg" alt="Villas at poco diablo">
+        <img src="img/VillasAtPocoDiablo.jpg" alt="Отель villas at poco diablo">
       </div>
       <div>
         <h2>
@@ -72,6 +79,8 @@
         <a href="#">Забронировать</a>
       </div>
       <div>
+        <span></span>
+        <span></span>
         <p>Рейтинг: 9,2<p>
       </div>
     </article>
@@ -79,9 +88,9 @@
   <footer>
     <p>#Visitsedona</p>
     <ul>
-      <li><a href="#"><img src="img/twitter.svg"></a></li>
-      <li><a href="#"><img src="img/facebook.svg"></a></li>
-      <li><a href="#"><img src="img/youtube.svg"></a></li>
+    	<li><a href="#"><img src="img/twitter.svg" alt="Twitter"></a></li>
+    	<li><a href="#"><img src="img/fb-icon.svg" alt="Facebook"></a></li>
+    	<li><a href="#"><img src="img/youtube.svg" alt="Youtube"></a></li>
     </ul>
     <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/htmlacademy.svg"></a>
   </footer>
