--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <nav>
       <a>
-        <img src="img/logo.svg" width="100" height="50" arc="Логотип Седоны">
+        <img src="img/logo-sedona.svg" width="100" height="50" arc="Логотип Седоны">
       </a>
       <ul>
         <li><a href="">Информация</a></li>
@@ -19,6 +19,9 @@
         <li><a href="catalog.html">Гостиницы</a></li>
       </ul>
     <nav>
+    	<div>
+    		<img src="img/WelcomeToSedona.jpg" alt="Добро пожаловать в Седону">
+    	</div>
   </header>
   <main>
     <section>
@@ -30,17 +33,44 @@
     </section>
     <section>
       <b>Заинтресовались?</b>
-      <p>Укажите предполошаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <button>Поиск Гостиницы в Седоне</button>
+      <p>Укажите предпологаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <button type="button">Поиск Гостиницы в Седоне</button>
       <!--Здесь будет форма-->
+      <form action="https://echo.htmlacademy.ru" method="post">
+      	<div>
+	      	<label for="check-in">Дата Заезда: </label>
+	      	<input type="text" name="date" id="check-in" placeholder="24 апреля 2017">
+	    </div>
+	    <div>
+	      	<label for="check-out">Дата Выезда</label>
+	      	<input type="text" name="date" id="check-out" placeholder="4 июля 2017">
+      	</div>
+      	<div>
+      		<label for="adult">Взрослые:</label>
+      		<div>
+      			<button type="button">Minus</button>
+      			<input type="text" name="adults" id="adult" value="2" required>
+      			<button type="button">Plus</button>
+      		</div>
+      	</div>
+      	<div>
+      		<label for="kid">Дети:</label>
+      		<div>
+      			<button type="button">Minus</button>
+      			<input type="text" name="kids" id="kid" value="0">
+      			<button type="button">Plus</button>
+      		</div>
+      	</div>
+      	<button type="button">Найти</button>
+      </form>
     </section>
   </main>
   <footer>
     <p>#Visitsedona</p>
       <ul>
-        <li><a href="#"><img src="img/twitter.svg"></a></li>
-        <li><a href="#"><img src="img/facebook.svg"></a></li>
-        <li><a href="#"><img src="img/youtube.svg"></a></li>
+        <li><a href="#"><img src="img/twitter.svg" alt="Twitter"></a></li>
+    	<li><a href="#"><img src="img/fb-icon.svg" alt="Facebook"></a></li>
+    	<li><a href="#"><img src="img/youtube.svg" alt="Youtube"></a></li>
       </ul>
      <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/htmlacademy.svg"></a>
   </footer>
